bk_ida/gccida/c1/get_unwidened
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_unwidened/src/tree.c:4616:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_unwidened/src/tree.c:4618:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_unwidened/src/tree.c:4668:22: error: expected expression
v13 = *( tree_node **)( high + 40); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_unwidened/src/tree.c:4668:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( high + 40); 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_unwidened/src/obj/tree.o] Error 1
